examples/bad/assigment.xd
int fun() {
    yeet 5 + 5;
}


int main() {
    int x;
    XD x = "string";

    string str = fun();
    yeet 0;
}